Allow a wallet to specify the validity of WUA during issuance
